2024-06-13: [FEATURE] Add new `CustomBorder` to draw window borders with user-defined functions
2024-06-06: [FEATURE] Add new `ConditionalBorder` to set window border depending on window conditions (name, class etc.)
2024-06-01: [BUGFIX] Fix `GlobalMenu` crash after reloading config
2024-05-29: [BUGFIX] Fix bug with border decorations when using both standard and decorated borders
2024-05-22: [RELEASE] v0.26.0 release - compatible with qtile 0.26.0
2024-05-19: [FEATURE] Add modified `Plasma` layout to include border highlighting
2024-05-10: [FEATURE] Add window border decorations (NB experimental)
2024-04-26: [FEATURE] Add hooks to `ALSAWidget` and `PulseVolumeExtra`
2024-04-25: [FEATURE] Add ability to drag `PopupSlider` and `PopupCircularProgress` controls (NB experimental)
2024-04-25: [BREAKING CHANGE] Update to using lazy calls in popups. Needs latest qtile.
2024-04-08: [RELEASE] v0.25.0 release - compatible with qtile 0.25.0
2024-03-10: [FEATURE] Expose widget popup menu commands and allow custom positioning
2024-03-02: [BUGFIX] Fix bug for volume widgets where bar crashes if volume is greater than 100%
2024-03-02: [BUGFIX] Fix popup menus ignoring config
2024-02-17: [FEATURE] Add `AnimatedImage` widget
2024-02-16: [FEATURE] Allow pango markup in `PopupText` controls
2024-02-09: [BUGFIX] Handle connection errors in `GithubNotifications` widget
2024-01-20: [RELEASE] v0.24.0 - compatible with qtile 0.24.0
2024-01-20: [PYPI] Enable release workflow to push future releases to PyPI
2024-01-20: [BUGFIX] Fix `Visualiser` bug with `hide=True`
2024-01-20: [FEATURE] Add `GroupBox2` widget
2023-12-21: [FEATURE] Add `IWD` widget
2023-11-17: [BUGFIX] Prevent double hooks for Mpris2 widget
2023-11-13: [BUGFIX] A neater fix for the `Visualiser` CPU bug
2023-11-13: [BUGFIX] Fix `fraction` KeyError in `UpowerWidget`
2023-11-13: [FEATURE] Add `invert` option to `Visualiser` to draw bars from top down
2023-11-12: [BUGFIX] (Trying to) fix increasing CPU with `Visualiser` widget